--- a/laurSpilcaYT/jpa_2023_c1_e1/pom.xml
+++ b/laurSpilcaYT/jpa_2023_c1_e1/pom.xml
@@ -25,6 +25,13 @@
             <artifactId>mysql-connector-j</artifactId>
             <version>8.0.33</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>5.0.1</version>
+         </dependency>
+
     </dependencies>
 
 </project>
